# morse-kodeboard

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
pcb/: fp-info-cache  morse_kodeboard.kicad_pcb  morse_kodeboard.kicad_prl  morse_kodeboard.kicad_pro  morse_kodeboard.kicad_sch
src/: debouncer.rs  decoder.rs  key_mapping.rs  main.rs  usb.rs
